# flaskhtmx

./: pyproject.toml
src/flaskhtmx/: __init__.py
src/flaskhtmx/templates/: base.html  feed.html
src/flaskhtmx/templates/partials/: entry.html  entry_page.html
